# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/login_http.LoginByEmailRequest"
+                            "$ref": "#/definitions/password_http.LoginByEmailRequest"
                         }
                     }
                 ],
@@ -40,7 +40,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/login_http.LoginByEmailResponse"
+                            "$ref": "#/definitions/password_http.LoginByEmailResponse"
                         }
                     },
                     "404": {
@@ -78,7 +78,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/register_http.RegisterByEmailRequest"
+                            "$ref": "#/definitions/password_http.RegisterRequest"
                         }
                     }
                 ],
@@ -86,7 +86,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/register_http.RegisterByEmailResponse"
+                            "$ref": "#/definitions/password_http.RegisterResponse"
                         }
                     },
                     "400": {
@@ -123,7 +123,7 @@
                 }
             }
         },
-        "login_http.LoginByEmailRequest": {
+        "password_http.LoginByEmailRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -134,7 +134,7 @@
                 }
             }
         },
-        "login_http.LoginByEmailResponse": {
+        "password_http.LoginByEmailResponse": {
             "type": "object",
             "properties": {
                 "status": {
@@ -142,7 +142,7 @@
                 }
             }
         },
-        "register_http.RegisterByEmailRequest": {
+        "password_http.RegisterRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -153,7 +153,7 @@
                 }
             }
         },
-        "register_http.RegisterByEmailResponse": {
+        "password_http.RegisterResponse": {
             "type": "object",
             "properties": {
                 "userID": {
